--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -36,17 +36,7 @@
 					</a>
 				</div>
 				<p>
-					旧版导航页
-				</p>
-			</div>
-			<div class="box">
-				<div class="img">
-					<a href="https://fmkli.rthe.net" target="_blank">
-						<img src="./Flysoft_files/Search.png">
-					</a>
-				</div>
-				<p>
-					新版导航页（热铁盒不给力，建议使用旧版）
+				   新版导航页
 				</p>
 			</div>
 			<div class="box">
