--- a/index.html
+++ b/index.html
@@ -1,97 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>fmkli | fmkli.js.org</title>
+    <link rel="icon" type="image/ico" href="//gravatar.loli.net/avatar/4cc893d113dd74ceca73f9863f2c5446/">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.12.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css">
 
-    <title>fmkli个人主页</title>
-    <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
-    <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
-    <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
-    <div id="box">
-        <!-- 个人资料卡片 -->
-        <div class="meBox">
-            <!-- 头像 -->
-            <div class="headPhoto"></div>
-            <!-- 介绍 -->
-            <div class="meBox-title">
-                <p>I'm fmkli</p>
-                <div class="fg"></div>
-            </div>
-            <div class="meBox-text">
-                <p>一名bilibili的卑微UP猪<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align:middle;"></p>
+    <div id="main" class="container">
+        <div class="row my-card justify-content-center">
+            <div class="col-lg-4 photo-bg"></div>
+            <div class="col-lg-8 card">
+                <h1>我是fmkli，这里是我的主页！</h1>
+                <p>我是一名bilibili的卑微UP猪</p>
                 <p>爱瞎倒腾网站</p>
                 <p>你看，又换了</p>
-		<h3>新年快乐！<h3>
-            </div>
-            <!-- 两个按钮 -->
-            <div class="meBox-Button">
-                <a href="https://blog.fmkli.ga">blog</a>
-                <a href="https://space.bilibili.com/543825809">bilibili</a>
-            </div>
-        </div>
-
-        <!-- 伪终端介绍 -->
-        <div id="cmdBox">
-            <!-- 第一个终端 -->
-            <div class="cmd">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>fmkli.js.org | bash1</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@fmkli</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
-                    <p>爱玩电脑，对html一知半解</p>
-                    <p>正在学习编程，正在超提前预备期末考试</p>
-	            <p>不如在<a href="https://space.bilibili.com/543825809">bilibili</a>里关注我</p>
-                    <span style="color: rgb(0, 190, 0);">root@fmkli</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./link.sh</span>
-		    <br/>
-		    <a href="https://cfstar.top">超凡实验室</a>
-			</br>
-			<a href="https://www.yfun.top/">hifun blog</a>
-			</br>
-		    <a href="https://govmoe.com/">MoYuBLOG</a>
-	            <br>	
-		    <span style="color: rgb(0, 190, 0);">root@fmkli</span>
-                    <span style="color: blue;">~</span>
-		    <span style="color: rgb(39, 39, 39);">./lyb.sh</span>
-		    <br>
-		    <p><a href="https://fmkli.js.org/lyb.html">留言板（点我前往）</a></p>
-                </div>
-            </div>
-            <!-- 第二个终端 -->
-            <div class="cmd cmd2">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>fmkli.js.org | bash2</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@fmkli</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./links.sh</span>
+               <p>爱玩电脑，对html一知半解</p>
+                <p>正在学习编程，正在超提前预备期末考试</p>
+	 <p>不如在<a href="https://space.bilibili.com/543825809">bilibili</a>里关注我</p>
+               <h3>新年快乐！<h3>
                     <p>我的其他站点：</p>
                     <ul class="ul">
                         <li><a href="https://Blog.fmkli.ga">Fmkli's Blog</a></li>
@@ -100,39 +34,18 @@
                         <li><a href="http://fkhost.ml/">fk免费主机</a></li>
 	        <li><a href="http://fkblog.5ay.xyz/">fmkli的公共博客</li>
 	        <li><a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
-                    </ul>
-                    <span style="color: rgb(0, 190, 0);">root@fmkli</span>
-                    <span style="color: blue;">~</span>
+                <div class="row">
+                    <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
+                    <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
                 </div>
+
+
+                <footer>
+                    <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
+                    </p>
+                </footer>
             </div>
         </div>
+
     </div>
-
-    <!-- 页脚 -->
-    <div id="footer">
-        <p>© 2020 fmkli</p>
-        <p>THEME MADE BY Nutssss</a></p>
-    </div>
-    <script>
-        !function () {
-            // 添加事件监听
-            document.addEventListener('visibilitychange', function () {
-                let pageVisibility = document.visibilityState
-                // 页面变为不可见时触发 
-                if (pageVisibility == 'hidden') {
-
-                    document.title = 'Fmkli:不要离开我awa'
-
-                }
-                // 页面变为可见时触发 
-                if (pageVisibility == 'visible') {
-
-                    document.title = 'Fmkli个人主页'
-
-                }
-            })
-        }()
-    </script>
-</body>
-
-</html>
+    <!-- aplayer -->
