--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
                         <li><a href="https://Blog.fmkli.ga">Fmkli's Blog</a></li>
                         <li><a href="https://fmkli.js.org/website%20navigation/">fk导航页</a></li>
                         <li><a href="http://bbs.fmkli.ga/">FK论坛</a></li>
-                        <li><a href="http://fkhost.ml/">fk免费主机</a></li>
-	        <li><a href="http://fkblog.5ay.xyz/">fmkli的公共博客</li>
-	        <li><a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
+                        <li><a href="http://fkhost.ml/">fk免费主机</a></li>	        <li><a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
                 <div class="row">
                     <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
                     <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
