--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                         <li><a href="https://fmkli.js.org/website%20navigation/">fk导航页</a></li>
                         <li><a href="http://bbs.fmkli.ga/">FK论坛</a></li>
                         <li><a href="http://fkhost.ml/">fk免费主机</a></li>	        <li><a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
+		       <h2>友链<h2>
+		        <br/>
+		    <a href="https://cfstar.top">超凡实验室</a>
+			</br>
+			<a href="https://www.yfun.top/">hifun blog</a>
+			</br>
+		    <a href="https://govmoe.com/">MoYuBLOG</a>
+	            <br>	
                 <div class="row">
                     <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
                     <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
