--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
                 <p>正在学习编程，正在超提前预备期末考试</p>
 	 <p>不如在<a href="https://space.bilibili.com/543825809">bilibili</a>里关注我</p>
                <h3>新年快乐！<h3>
-                    <p>我的其他站点：</p>
-                        <li><a href="https://Blog.fmkli.ga">Fmkli's Blog</a></li>
-                        <li><a href="https://fmkli.js.org/website%20navigation/">fk导航页</a></li>
-                        <li><a href="http://bbs.fmkli.ga/">FK论坛</a></li>
-                        <li><a href="http://fkhost.ml/">fk免费主机</a></li>	        <li><a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
 		       <h2>友链</h2>
 		    <a href="https://cfstar.top">超凡实验室</a>
 		    <a href="https://www.yfun.top/">hifun blog</a>
@@ -39,7 +34,11 @@
                     <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
                     <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
                 </div>
-
+                    <h2>我的其他站点：</h2>
+                        <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a>
+                        <a href="http://bbs.fmkli.ga/">FK论坛</a>
+                        <a href="http://fkhost.ml/">fk免费主机</a>
+		       <a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a>
 
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
