--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
 		       <h2>友链</h2>
 		    <a href="https://cfstar.top">超凡实验室</a>
 		    <a href="https://www.yfun.top/">hifun blog</a>
-		    <a href="https://govmoe.com/">MoYuBLOG</a>
-                <div class="row">
-                    <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
-                    <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
-                </div>
-                    <h2>我的其他站点：</h2>
+		       <a href="https://govmoe.com/">MoYuBLOG</a>
+                    <h2>我的站点：</h2>
+		        <a href="https://blog.fmkli.ga">fmkli的blog</a>
                         <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a>
                         <a href="http://bbs.fmkli.ga/">FK论坛</a>
                         <a href="http://fkhost.ml/">fk免费主机</a>
 		       <a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a>
+                <div class="row">
+                    <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
+                    <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
+	            
+                </div>
 
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
