--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <div id="main" class="container">
         <div class="row my-card justify-content-center">
             <div class="col-lg-8 card">
+  		<div class="alert alert-info alert-dismissible">
+    		<button type="button" class="close" data-dismiss="alert">&times;</button>
+    		<strong>欢迎！</strong> hello，欢迎来到我的主页！
+  		</div>
                 <h1>我是fmkli，这里是我的主页！</h1>
                 <p>我是一名bilibili的卑微UP猪</p>
                 <p>爱瞎倒腾网站</p>
