--- a/index.html
+++ b/index.html
@@ -61,12 +61,22 @@
 	            
                 </div>
 
-                <footer>
-                    <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
-                    </p>
-                </footer>
+
             </div>
         </div>
 
     </div>
     <!-- aplayer -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1>友链</h1> 
+   <a href="https://cfstar.top">超凡实验室</a>
+    <a href="https://www.yfun.top/">hifun blog</a>
+    <a href="https://govmoe.com/">MoYuBLOG</a>
+  </div>
+</div>
+
+                <footer>
+                    <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
+                    </p>
+                </footer>
