--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
                 <div class="row">
                     <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
                     <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
-	            
                 </div>
-
-
+                <footer>
+                    <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
+                    </p>
+                </footer>
             </div>
         </div>
 
     </div>
     <!-- aplayer -->
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron">
   <div class="container">
     <h1>友链</h1> 
    <a href="https://cfstar.top">超凡实验室</a>
