--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 </div>
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
+			    <p>申请中awa</p>
+	          <a href="https://icp.gov.moe" target="_blank">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20212122" target="_blank"> 20212122号</a>
                     </p>
                 </footer>
             </div>
         </div>
 
     </div>
-    <!-- aplayer -->
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=4010201&auto=1&height=66"></iframe>
