--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 </div>
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
+	         <p>统计人数</p><div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3246133&c=9738712" alt="AmazingCounters.com"></a></div>
           </p>
                 </footer>
             </div>
