--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
-	         <p>统计人数</p>
+	         <p>统计人数</p><script language="javascript" src="http://count28.51yes.com/click.aspx?id=282885607&logo=11" charset="gb2312"></script>
           </p>
                 </footer>
             </div>
