--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <a href="https://space.bilibili.com/543825809"_blank" class="btn btn-secondary col-lg-4">bilibili</a>
                 </div>
                 <footer>
-                    <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a>
-                  <script language="javascript" src="http://count28.51yes.com/click.aspx?id=282885607&logo=12" charset="gb2312"></script>          </p>
+                    <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a></p>
+                  <script language="javascript" src="http://count28.51yes.com/click.aspx?id=282885607&logo=12" charset="gb2312"></script>
                 </footer>
             </div>
         </div>
