--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <a class="nav-link" href="https://fmkli.js.org">fmkli</a>
     </li>
 	  <a class="nav-link" href="https://blog.fmkli.ga">fmkli的blog</a>
+    </li>
+	  <a class="nav-link" href="https://fmkli.js.org/lyb.html">留言板</a>
     <li class="nav-item active">
     </li>
   </ul>
