--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                 </div>
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a></p>
+		      <p>本站总访问量
+                   <span id="busuanzi_value_site_pv"></span>次</p>
                 </footer>
             </div>
         </div>
