--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                         <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a>
                         <a href="http://fkhost.ml/">fk免费主机</a>
 		       <a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a>
+		       <a href="http://fmkli.ys168.com/">fmkli的网盘</a>
 		       <br>
                 <div class="row">
                     <a href="https://blog.fmkli.ga"_blank" class="btn btn-primary col-lg-4">blog</a>
