--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 		       <h2>友链</h2>
 		    <a href="https://www.yfun.top/">hifun blog</a>
 		       <a href="https://govmoe.com/">MoYuBLOG</a>
-                    <h2>我的站点：</h2>
+		       <a href="https://cfstar.top/">CFStar</a>
+		       <h2>我的站点：</h2>
 		        <a href="https://blog.fmkli.ga">fmkli的blog</a>
                         <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a>
                         <a href="http://fkhost.ml/">fk免费主机</a>
