--- a/lyb.html
+++ b/lyb.html
@@ -1,14 +1,7 @@
-<head>
-    <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
-</head>
-<body>
-    <div id="vcomments"></div>
-    <script>
-        new Valine({
-            el: '#vcomments',
-            appId: 'rRTo2bc2jc6aMEC9wtNUb0nN-MdYXbMMI',
-            appKey: 'x3e5cT6MapqFMnjDe4jxjbev'
-        })
-    </script>
-
-</body>
+<script language="javascript" type="text/javascript">   
+    // 以下方式直接跳转  
+    //飞鸟慕鱼博客
+    window.location.href = 'https://blog.fmkli.ga/guestbook/';
+    // 五秒以后再跳转
+    setTimeout("javascript:location.href='https://blog.fmkli.ga/guestbook/'", 1);   
+</script>
