--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <a href="http://fkhost.ml/">fk免费主机</a>
 		       <a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a>
 		       <a href="http://fmkli.ys168.com/">fmkli的网盘</a>
-		       <br>
+		       <a href="https://blog.fmkli.ga/guestbook/">留言板</a>
+			   <br>
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a></p>
                 </footer>
