--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		       <h2>我的站点：</h2>
 		        <a href="https://blog.fmkli.ga">fmkli的blog</a>
                         <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a>
-                        <a href="http://fkhost.ml/">fk免费主机</a>
+                        <a>fk免费主机(下线)</a>
 		       <a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a>
 		       <a href="http://fmkli.ys168.com/">fmkli的网盘</a>
 		       <a href="https://blog.fmkli.ga/guestbook/">留言板</a>
