--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 			   <br>
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a></p>
+		    <hr>
+			<p>2021/2 CYZ软件发布！Q群：不知道</p>
                 </footer>
             </div>
         </div>
