--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a></p>
 		    <hr>
-			<p>2021/2 CYZ软件发布！Q群：不知道</p>
+			<a href="https://qm.qq.com/cgi-bin/qm/qr?k=3Fm2LbV15-Mvcc1aqS6MyX9o_cy6d2HY&authKey=%2BpEPZZiwE5d4BGH%2FPXoAH24xhG56rURlKSuPXp9d76MTpbzCCd88QkZ9gEeMW9g%2F&noverify=0&group_code=700737220">2021/2 CYZ软件发布</a>
                 </footer>
             </div>
         </div>
