--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		       <a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a>
 		       <a href="http://fmkli.ys168.com/">fmkli的网盘</a>
 		       <a href="https://blog.fmkli.ga/guestbook/">留言板</a>
+		       <a href="https://fmkli.js.org/32日.html">32日</a>
 			   <br>
                 <footer>
                     <p>Copyright 2021 - Now <a href="https://fmkli.js.org" target="_blank">fmkli的主页</a></p>
