--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="col-lg-8 card">
   		<div class="alert alert-info alert-dismissible">
     		<button type="button" class="close" data-dismiss="alert">&times;</button>
+		<img src="https://s1.ax1x.com/2020/08/10/aqsA9f.png">
     		<strong>欢迎！</strong> hello，欢迎来到我的主页！
   		</div>
                 <h1>我是fmkli，这里是我的主页！</h1>
