--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		    <a href="https://www.yfun.top/">hifun blog</a>
 		       <a href="https://govmoe.com/">MoYuBLOG</a>
 		       <a href="https://cfstar.top/">CFStar</a>
+		       <a href="https://mc-bob.now.sh">bob实况的网站</a>
 		       <h2>我的站点：</h2>
 		        <a href="https://blog.fmkli.ga">fmkli的blog</a>
                         <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a>
