--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p>喜欢和别人玩耍</p>
                     <p>一起玩才好玩</p>
                     <p>这是我的好朋友：<a href="https://space.bilibili.com/401947867/">bob实况</a></p>
-                    <span style="color: rgb(0, 190, 0);">root@nutssss</span>
+                    <span style="color: rgb(0, 190, 0);">root@fmkli</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);"></span>
                 </div>
