--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <hr class="panel-cover__divider">
         <p class="panel-cover__description">爱好淦网站，van游戏</br>瞎折腾浪费时间最在行</br><a href="https://space.bilibili.com/543825809">fmkli的bilibili</a></p>
         <hr class="panel-cover__divider">
-        <p class="panel-cover__description">我的好朋友：</br><a href="https://space.bilibili.com/401947867/">bob实况</a></br><a href="https://cfstar.top/">CFStar</a></br><a href="https://govmoe.com/">MoYuBLOG</a></br><a href="https://www.yfun.top/">hifun blog</a></p>
-        <hr class="panel-cover__divider"> 
-	<p class="footer">Copyright © 2021 <a href="https://fmkli.js.org/" target="_blank">Fmkli</a> All Rights Reserved.</p>	
+	<p class="footer">Copyright © 2021 <a href="https://fmkli.js.org/" target="_blank">Fmkli</a> All Rights Reserved.</p>
+	<br/>
+	<p>我的好朋友：</br><a href="https://space.bilibili.com/401947867/">bob实况</a></br><a href="https://cfstar.top/">CFStar</a></br><a href="https://govmoe.com/">MoYuBLOG</a></br><a href="https://www.yfun.top/">hifun blog</a></p>
 
         <div class="navigation-wrapper">
           <div>
