--- a/index.html
+++ b/index.html
@@ -22,21 +22,17 @@
         <h1 class="panel-cover__title panel-title"><a href="https://fmkli.js.org/" title="">Fmkli</a></h1>
         <span class="panel-cover__subtitle panel-subtitle"><script>hitokoto()</script>
         <hr class="panel-cover__divider">
+		<a href="https://blog.fmkli.ga">fmkli的blog</a></li>
+		<a href="https://blog.fmkli.ga/guestbook/">留言板</a></li>
+	        <a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
+	        <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a></li>
+	<hr class="panel-cover__divider">
         <p class="panel-cover__description">爱好淦网站，van游戏</br>瞎折腾浪费时间最在行</br><a href="https://space.bilibili.com/543825809">fmkli的bilibili</a></p>
         <hr class="panel-cover__divider">
-	<p class="footer">Copyright © 2021 <a href="https://fmkli.js.org/" target="_blank">Fmkli</a> All Rights Reserved. <br><p>我的好朋友：</br><a href="https://space.bilibili.com/401947867/">bob实况</a></br><a href="https://cfstar.top/">CFStar</a></br><a href="https://govmoe.com/">MoYuBLOG</a></br><a href="https://www.yfun.top/">hifun blog</a></p></p>
+	  <p>我的好朋友：</br><a href="https://space.bilibili.com/401947867/">bob实况</a></br><a href="https://cfstar.top/">CFStar</a></br><a href="https://govmoe.com/">MoYuBLOG</a></br><a href="https://www.yfun.top/">hifun blog</a></p>
+        <hr class="panel-cover__divider">
+	<p class="footer">Copyright © 2021 <a href="https://fmkli.js.org/" target="_blank">Fmkli</a> All Rights Reserved.</p>
 
-        <div class="navigation-wrapper">
-          <div>
-            <nav class="cover-navigation cover-navigation--primary">
-              <ul class="navigation">
-                <li class="navigation__item"><a href="https://blog.fmkli.ga">fmkli的blog</a></li>
-                <li class="navigation__item"><a href="https://fmkli.js.org/website%20navigation/">fk导航页</a></li>
-                <li class="navigation__item"><a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
-                <li class="navigation__item"><a href="https://blog.fmkli.ga/guestbook/">留言板</a></li>
-              </ul>
-            </nav>
-          </div>
           
 <div>
 <nav class="cover-navigation navigation--social">
