--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h1 class="panel-cover__title panel-title"><a href="https://fmkli.js.org/" title="">Fmkli</a></h1>
         <span class="panel-cover__subtitle panel-subtitle"><script>hitokoto()</script>
         <hr class="panel-cover__divider">
+		<p>Fmkli的网站</p>
+		<br>
 		<a href="https://blog.fmkli.ga">fmkli的blog</a></li>
 	    	<br>
 		<a href="https://blog.fmkli.ga/guestbook/">留言板</a></li>
@@ -30,7 +32,7 @@
 	  	<br>
 	        <a href="https://fmkli.js.org/website%20navigation/">fk导航页</a></li>
 	<hr class="panel-cover__divider">
-        <p class="panel-cover__description">爱好淦网站，van游戏</br>瞎折腾浪费时间最在行</br><a href="https://space.bilibili.com/543825809">fmkli的bilibili</a></p>
+        <p class="panel-cover__description">爱好淦网站，van游戏</br>瞎折腾浪费时间最在行</br><a href="https://space.bilibili.com/543825809">fmkli的bilibili</a></br>（fmkli的完美避风港）</p>
         <hr class="panel-cover__divider">
 	  <p>我的好朋友：</br><a href="https://space.bilibili.com/401947867/">bob实况</a></br><a href="https://cfstar.top/">CFStar</a></br><a href="https://govmoe.com/">MoYuBLOG</a></br><a href="https://www.yfun.top/">hifun blog</a></p>
         <hr class="panel-cover__divider">
