--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="panel-cover__title panel-title"><a href="https://fmkli.js.org/" title="">Fmkli</a></h1>
         <span class="panel-cover__subtitle panel-subtitle"><script>hitokoto()</script>
         <hr class="panel-cover__divider">
-		<p>Fmkli的网站</p>
+		<a>Fmkli的网站</a>
 		<br>
 		<a href="https://blog.fmkli.ga">fmkli的blog</a></li>
 	    	<br>
