--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <li><a href="https://space.bilibili.com/401947867/">bob实况</a></li>
                         <li><a href="https://cfstar.top/">CFStar</a></li>
                         <li><a href="https://govmoe.com/">MoYuBLOG</a></li>
-                        <li><a href="https://www.yfun.top/">hifun blog</a></li>
+                        <li><a href="https://blog.yfun.top/">hifun blog</a></li>
                     </ul>
                 </div>
             </div>
