--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <p>我是一只爱van我的世界的UP</p>
                 <p>我的bilibili：Fmkli</p>
                 <p>瞎折腾浪费时间最在行</p>
+                <p>终于能访问github了！</p>
+                <p>最后修改时间:2021/7/3</p>
             </div>
             <!-- 两个按钮 -->
             <div class="meBox-Button">
@@ -88,7 +90,6 @@
                     <ul class="ul">
                         <li><a href="https://blog.fmkli.ga">fmkli的blog</a></li>
                         <li><a href="https://blog.fmkli.ga/guestbook/">留言板</a></li>
-                        <li><a href="https://fmkli362082388.wordpress.com/">fmkli的备用博客</a></li>
                         <li><a href="https://fmkli.js.org/website%20navigation/">fk导航</a></li>
                     </ul>
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
