--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                         <li><a href="https://blog.fmkli.ga">fmkli的blog</a></li>
                         <li><a href="https://blog.fmkli.ga/guestbook/">留言板</a></li>
                         <li><a href="https://fmkli.js.org/website%20navigation/">fk导航</a></li>
+                        <li><a href="https://fmkli.js.org/fkwrite">笔记(备用博客？)</a></li>
+                        <li><a href="http://fmkli.ccaeo.com/">备用博客</a></li>
                     </ul>
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
                     <span style="color: blue;">~</span>
