--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
             })
         }()
     </script>
-<p>友链：<a href="https://blog.huixcwg.net/" target="_blank">小陈网管</a>--<a href="https://cfstar.top/" target="_blank">超凡实验室</a>--<a href="https://govmoe.com/" target="_blank">MoYuBlog</a></p>	
+<p>友链：<a href="https://cfstar.top/" target="_blank">超凡实验室</a>--<a href="https://boblive.vercel.app/" target="_blank">bob实况</a></p>	
 <hr>
 </div></div></body></html>
