--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<li class="navigation__item"><a href="http://fmkli.ccaeo.com/">备用博客</a></li>
 		<li class="navigation__item"><a href="https://fmkli.js.org/website%20navigation/">fk导航</a></li>
 		<li class="navigation__item"><a href="https://fmkli.js.org/game.html">拥有的游戏</a></li>
+		<li class="navigation__item"><a href="http://fmkli.ccaeo.com/bbs/upload/">FKFK论坛</a></li>
 		<hr>
 <div>
 <style> .main{
