--- a/game.html
+++ b/game.html
@@ -51,3 +51,16 @@ Steam
 4.Missing Translation
 <br>
 5.Surviving Mars
+<br>
+<br>
+我的最爱
+Cities: Skylines
+<br>
+Overcooked!2
+<br>
+Among Us
+<br>
+人类一败涂地 / Human Fall Flat
+<br>
+Horizon Chase Turbo
+<br>
