--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
                             class="iconfont iconmail_fill"></span> Mail</a>
 
                 </div>
+                 <div class="rin-card-part" id="contact">
+                    <div class="rin-card-title2 mdui-typo"><a href="#contact">#</a> 友链</div>
+
+
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize" href="https://boblive.vercel.app/" target="_blank"><span class="iconfont icongithub"></span>Bob实况</a>
+
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink mdui-text-capitalize" href="https://cfstar.top" target="_blank"><span class="iconfont iconbilibili"></span>CFstar</a>
+                </div>
 
 
 
