--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize" href="https://boblive.vercel.app/" target="_blank"><span class="iconfont icongithub"></span>Bob实况</a>
 
-                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-pink mdui-text-capitalize" href="https://cfstar.top" target="_blank"><span class="iconfont iconbilibili"></span>CFstar</a>
+                    <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize" href="https://cfstar.top" target="_blank"><span class="iconfont iconbilibili"></span>CFstar</a>
                 </div>
 
 
