--- a/game.html
+++ b/game.html
@@ -39,6 +39,10 @@ Epic:
 <br>
 19.战舰世界
 <br>
+20.Obduction
+<br>
+21.Offworld Trading Company
+<br>
 <br>
 Steam
 <br>
@@ -65,3 +69,4 @@ Among Us
 <br>
 Horizon Chase Turbo
 <br>
+最后更新：2021/7/16
