--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="mdui-col-xs-12 mdui-col-md-2">
             <div class="rin-left">
                 <div class="rin-logo">
-                    <img src="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/assets/img/logo.jpg">
+                    <img src="./Flysoft_files/fmkli.png">
                 </div>
                 <div class="rin-left-title">Fmkli的小站</div>
                 <div class="rin-left-title2">这个UP超懒滴！</div>
