--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@double/mdui/css/mdui.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@double/assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="icon" href="assets/img/logo.bmp">
+    <link rel="stylesheet" href="assets/css/index3.css">
+    <link rel="icon" href="./Flysoft_files/fmkli.png">
     <script>
         var _hmt = _hmt || [];
         (function () {
@@ -21,14 +21,14 @@
 <div id="rin-bg"></div>
 <main id="rin-main">
     <div id="rin-headimg"></div>
-    <div class="rin-name">Writecode</div>
-    <div class="rin-description">「心平气和，无限进步」</div>
+    <div class="rin-name">Fmkli</div>
+    <div class="rin-description">超懒得站长</div>
     <div class="rin-tr"></div>
-    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="detaile.html">更多信息QWQ</a>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="detaile.html">更多信息awa</a>
 </main>
 <footer id="rin-footer">
     <div>
-            ©2021 Writecode | Made with love by Seirin | BG: <a 
+            ©2021 Fmkli | Made with love by Seirin | BG: <a 
                    href="https://www.pixiv.net/artworks/56652667" id="bg-link" target="_blank">Pixiv</a>
         </div>
 </footer>
