--- a/detaile.html
+++ b/detaile.html
@@ -126,24 +126,22 @@
 
 
                     <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-black mdui-text-capitalize" href="https://blog.fmkli.ga/guestbook/" target="_blank"><span class="iconfont iconbook"></span>博客留言板</a>
-<!-- 来必力City版安装代码 -->
-<div id="lv-container" data-id="city" data-uid="MTAyMC81MjI0OC8yODcyNw==">
-<script type="text/javascript">
-   (function(d, s) {
-       var j, e = d.getElementsByTagName(s)[0];
-
-       if (typeof LivereTower === 'function') { return; }
-
-       j = d.createElement(s);
-       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-       j.async = true;
-
-       e.parentNode.insertBefore(j, e);
-   })(document, 'script');
-</script>
-<noscript>为正常使用来必力评论功能请激活JavaScript</noscript>
-</div>
-<!-- City版安装代码已完成 -->
+<head>
+..
+<script src='//cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js'></script>
+...
+</head>
+<body>
+...
+<div id="waline"></div>
+<script>
+    new Waline({
+      el: '#waline',
+      path: location.pathname,
+      serverURL: 'https://sdf-three.vercel.app/'
+    });
+  </script>
+</body>
                 </div>
 
 
