--- a/detaile.html
+++ b/detaile.html
@@ -41,7 +41,7 @@
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="http://fkhost.ml/" target="_blank"><span class="iconfont icongame"></span> FK免费网站托管</a>
 
-		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fmkli.js.org/getdm.html/" target="_blank"><span class="iconfont icongame"></span> 二级域名</a>
+		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="http://dm.fkhost.ml" target="_blank"><span class="iconfont icongame"></span> 二级域名</a>
 
 
         </div>
