--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="rin-description">欢迎访问我的小站</div>
     <div class="rin-tr"></div>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="detaile.html">更多信息awa</a>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga">我的blog</a>
 </main>
 <footer id="rin-footer">
     <div>
