--- a/detaile.html
+++ b/detaile.html
@@ -41,6 +41,8 @@
 
 		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="http://dm.fkhost.ml" target="_blank"><span class="iconfont icongame"></span> 二级域名</a>
 
+		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fkbob.ml" target="_blank"><span class="iconfont icongame"></span>与Bob实况的联合网站</a>
+
 
         </div>
             </div>
