--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ thank you
 <script src="static/js/main.js"></script>
 <script>
     (function () {
-        var feedType = "json";
+        var feedType = "xml";
         var feedPath = "https://blog.fmkli.ga/feed.php";
         var bgArr = [{
             "url": "https://bu.dusays.com/2021/07/21/e43d8338764be.jpg",
