--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@ thank you
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans" media="none" onload="this.media='all'">
 <script src="https://cdn.jsdelivr.net/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
-<script src="static/js/main.js"></script>
+<script src="https://blog.fmkli.ga/test/static/js/main.js"></script>
 <script>
     (function () {
-        var feedType = "xml";
+        var feedType = "json";
         var feedPath = "https://blog.fmkli.ga/feed.php";
         var bgArr = [{
             "url": "https://bu.dusays.com/2021/07/21/e43d8338764be.jpg",
