--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ thank you
 <script>
     (function () {
         var feedType = "json";
-        var feedPath = "https://blog.fmkli.ga/feed.php";
+        var feedPath = "https://blog.fmkli.ga/test/feed.php";
         var bgArr = [{
             "url": "https://bu.dusays.com/2021/07/21/e43d8338764be.jpg",
             "thumb": "https://bu.dusays.com/2021/07/21/e43d8338764be.jpg"
