--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="rin-tr"></div>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="detaile.html">更多信息awa</a>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://blog.fmkli.ga">我的blog</a>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://i.fmkli.ga">我的二号主页</a>
 </main>
 <footer id="rin-footer">
     <div>
