--- a/detaile.html
+++ b/detaile.html
@@ -149,6 +149,19 @@
 </div>
 <!-- City版安装代码已完成 -->
 				</div>
+						
+                <div class="rin-card-part" id="article">
+                    <div class="rin-card-title2 mdui-typo"><a href="#article">#</a> 文章</div>
+
+                    <a target="_blank" href="https://blog.fmkli.ga/index.php/archives/9/">
+                    <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
+                        <div class="rin-article-title">（水）博客换新</div>
+                        <div class="rin-article-content">创建hexo博客时自带的（梦的开始）</div>
+                    </div>
+                    </a>
+
+                </div>
+
 
 
                 <div class="rin-tr"></div>
