--- a/detaile.html
+++ b/detaile.html
@@ -43,7 +43,7 @@
 
 		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fkbob.ml" target="_blank"><span class="iconfont icongame"></span>与Bob实况的联合网站</a>
 
-		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fmklipan.herokuapp.com/" target="_blank"><span class="iconfont icongame"></span>Fmkli的个人网盘</a>
+		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fkpan.herokuapp.com/" target="_blank"><span class="iconfont icongame"></span>Fmkli的个人网盘</a>
 		
 
 
